refactor: change due pull to request comments